--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div id="app"></div>
     <script src="./lib/vue.js"></script>
     <script src="./lib/vue-router.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script type="module" src="./js/main.js"></script>
 </body>
 </html>
